// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works on toggle 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail snapguidist__test--expanded"
>
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="snapguidist__arrow snapguidist__arrow--expanded"
        >
          ▼
        </span>
      </button>
    </div>
    <div>
      <div>
        <Code
          label="Actual"
          value="actual"
        />
        <Code
          label="Expected"
          value="expected"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`works on update 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail"
>
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="snapguidist__arrow"
        >
          ▼
        </span>
      </button>
    </div>
    <div>
      <div>
        <Code
          label="Actual"
          value="actual"
        />
        <Code
          label="Expected"
          value="expected"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`works when fail, with diff 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail"
>
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="snapguidist__arrow"
        >
          ▼
        </span>
      </button>
    </div>
    <div>
      <div>
        <Code
          label="Actual"
          value="actual"
        />
        <Code
          label="Expected"
          value="expected"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`works when fail, without diff) 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail"
>
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="snapguidist__arrow"
        >
          ▼
        </span>
      </button>
    </div>
    <div>
      <Code
        diff={true}
        label="Difference"
        value="diff"
      />
    </div>
  </div>
</div>
`;

exports[`works when is fetching 1`] = `
<div
  className="snapguidist__test snapguidist__test--fail"
>
  <div>
    <div>
      <button
        className="snapguidist__button"
        disabled={true}
        onClick={[Function]}
      >
        Update
      </button>
      <button
        className="snapguidist__button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="snapguidist__arrow"
        >
          ▼
        </span>
      </button>
    </div>
    <div>
      <div>
        <Code
          label="Actual"
          value="actual"
        />
        <Code
          label="Expected"
          value="expected"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`works when pass 1`] = `
<div
  className="snapguidist__test snapguidist__test--pass"
/>
`;
